// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should overwrite nested value creating necessary objects and arrays 1`] = `
Object {
  "prop": Object {
    "path": Array [
      0,
      "a",
    ],
    "type": "primitive",
    "value": "the-value-1",
  },
}
`;

exports[`should overwrite nested value creating necessary objects and arrays 2`] = `
Object {
  "prop": Object {
    "path": Array [
      0,
      "a",
    ],
    "type": "map",
    "value": Array [
      ,
      Object {
        "b": "the-value-2",
      },
    ],
  },
}
`;

exports[`should overwrite nested value creating necessary objects and arrays 3`] = `
Object {
  "prop": Object {
    "path": Array [
      0,
      "a",
      1,
      "b",
    ],
    "type": "primitive",
    "value": "the-value-2",
  },
}
`;

exports[`should overwrite nested value creating necessary objects and arrays 4`] = `
KvasDataSourceSyncContainer {
  "dataSource": KvasInMemoryJsonDataSource {
    "operations": KvasInMemoryJsonMapOperations {},
    "rootMap": KvasInMemoryJsonMap {
      "host": Array [
        Object {
          "a": Array [
            ,
            Object {
              "b": "the-value-2",
            },
          ],
        },
      ],
      "icfg": Object {
        "getValueType": [Function],
        "options": Object {
          "ignoreIncompatibleHostAndKey": false,
        },
      },
      "mapType": "array",
    },
  },
}
`;
